chore: upgrade insecure requests and allow frames in CSP

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://www.capitune.com">
     <meta name="twitter:title" content="Capitune – Connect by Passion">
     <meta name="twitter:description" content="Music. Travel. Food. Find your tribe by what you love.">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' data: https:;">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' data: https:; frame-src 'self' https: data:; connect-src 'self' https:;">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
